--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -525,8 +525,8 @@ label {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   cursor: pointer;
-  max-height: 100%;
-  width: 100%;
+  height: 100%;
+  max-width: 100%;
 }
 
 .zero-width {
@@ -1434,7 +1434,7 @@ label {
   background-color: lime;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
   .TagsMenu-category-title:hover * {
     color: black;
   }
@@ -2244,7 +2244,10 @@ label {
   width: 20px;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
+  .MobileNav-wrapper {
+    width: 100%;
+  }
   .FilterTree-container {
     padding-top: 0;
     font-size: 16px;
@@ -2468,7 +2471,15 @@ input:checked + .slider:before {
   grid-row-end: 3;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
+  .FilePreview--imageContainer {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 33%;
+            flex: 1 1 33%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
   .MobileNav-container, .enlarge-closeButton-container {
     height: 30px;
   }
