--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -339,6 +339,9 @@ font-family: 'Times New Roman', Times, serif;
 .FilePreview--imageContainer__empty > *{
     transform: translateY(200px) !important;
 }
+// .left-aligned{
+//     align-self: flex-end;
+// }
 
 .enlarge-border{
     position: absolute;
@@ -377,8 +380,8 @@ font-family: 'Times New Roman', Times, serif;
     transform-origin: bottom;
     transform: translateY(0);
     cursor: pointer;
-    max-height: 100%;
-    width: 100%;
+    height: 100%;
+    max-width: 100%;
 }
 .zero-width{
     height: 0;
@@ -1036,7 +1039,7 @@ font-family: 'Times New Roman', Times, serif;
     background-color: lime;
 }
 //MEDIA QUERY MOBILE *************************************************************************************************************
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
     $hovercolor: white !important;
     .TagsMenu-category-title:hover *{
         color: black;
@@ -1431,8 +1434,12 @@ font-family: 'Times New Roman', Times, serif;
       grid-row-end: 3;
   }
 
-
-  @media only screen and (max-width: 720px) {
+  @media only screen and (max-width: 768px) {
+    .FilePreview--imageContainer{
+        flex: 1 1 33%;
+    }
+  }
+  @media only screen and (max-width: 768px) {
     $navHeight_mobile: 30px;
     .MobileNav-container, .enlarge-closeButton-container{
         height: $navHeight_mobile;
