--- a/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.scss
+++ b/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.scss
@@ -22,7 +22,8 @@
     top: 0;
     opacity: 0.18;
     transition: opacity 0.1s;
-    z-index: 999;
+    // z-index: 999;
+    z-index: 1;
     cursor: pointer;
 
 }
@@ -74,7 +75,7 @@
     background-color: white;
     will-change: transform;
     overflow: hidden;
-    z-index: 998;
+    // z-index: 998;
 }
 .slide{
     position: relative;
