--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -668,7 +668,7 @@ label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 20px 0 10px 0;
+  margin: 10px 0 10px 0;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -686,8 +686,12 @@ label {
 }
 
 .Tags-item_container {
-  font-family: 'Courier New', Courier, monospace !important;
-  border: 1px solid black;
+  height: 20px;
+  max-height: 20px;
+  text-transform: uppercase;
+  font-size: 10px;
+  color: #515151;
+  border: 1px solid #515151;
   padding: 2px 7px 2px 7px !important;
   margin: 2px 0px 2px 8px !important;
   cursor: pointer;
@@ -700,9 +704,8 @@ label {
 }
 
 .Tags-item_text {
-  font-size: 12px;
-  font-weight: 600;
   white-space: nowrap;
+  text-transform: uppercase;
 }
 
 .Tags-item_container-closeButton {
@@ -720,11 +723,11 @@ label {
 
 .Tags-item_container-closeButton_open {
   width: 60px;
+  min-width: 60px;
   color: white;
   font-weight: bold;
   text-transform: uppercase !important;
   border: none;
-  display: initial;
   overflow: visible;
 }
 
@@ -826,7 +829,6 @@ label {
 
 .ArtworkInfo-wrapper {
   width: 100%;
-  height: 0;
   background-color: white;
 }
 
@@ -1325,7 +1327,6 @@ label {
   display: initial;
   height: 100%;
   overflow: hidden;
-  padding: 0 3vw 0 3vw;
 }
 
 .explorer-view {
@@ -1681,7 +1682,6 @@ label {
     display: initial;
     height: 100%;
     overflow: hidden;
-    padding: 0;
   }
   .enlarge-scroll-down {
     -webkit-transform: translateY(100%);
