--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -468,7 +468,7 @@ font-family: 'Times New Roman', Times, serif;
     display: flex;
     // display: grid;
     // grid-template-columns: 1fr min-content;
-    margin: 20px 0 10px 0;
+    margin: 10px 0 10px 0;
     justify-content: flex-end;
     
 }
@@ -478,8 +478,13 @@ font-family: 'Times New Roman', Times, serif;
     justify-content: flex-end;
 }
 .Tags-item_container{
-    font-family: 'Courier New', Courier, monospace !important;
-    border: 1px solid black;
+    // font-family: 'Courier New', Courier, monospace !important;
+    height: 20px;
+    max-height: 20px;
+    text-transform: uppercase;
+    font-size: 10px;
+    color: rgb(81, 81, 81);
+    border: 1px solid rgb(81, 81, 81);
     padding: 2px 7px 2px 7px !important;
     margin: 2px 0px 2px 8px !important;
     cursor: pointer;
@@ -490,9 +495,10 @@ font-family: 'Times New Roman', Times, serif;
     transform: scale(1.1);
 }
 .Tags-item_text{
-    font-size: 12px;
-    font-weight: 600;
+    // font-size: 12px;
+    // font-weight: 600;
     white-space: nowrap;
+    text-transform: uppercase;
 }
 .Tags-item_container-closeButton{
     transition: width 0.2s;
@@ -507,11 +513,11 @@ font-family: 'Times New Roman', Times, serif;
 }
 .Tags-item_container-closeButton_open{
     width: 60px;
+    min-width: 60px;
     color: white;
     font-weight: bold;
     text-transform: uppercase !important;
     border: none;
-    display: initial;
     overflow: visible;
     .Tags-item_text{
         color: white;
@@ -601,10 +607,9 @@ font-family: 'Times New Roman', Times, serif;
 }
 .ArtworkInfo-wrapper{
     width: 100%;
-    // height: 100%;
-    height: 0;
     background-color: white;
 }
+
 .ArtworkInfo-preview-container{
     height: 75px;
     z-index: 11;
@@ -963,7 +968,6 @@ font-family: 'Times New Roman', Times, serif;
     display: initial;
     height: 100%;
     overflow: hidden;
-    padding: 0 3vw 0 3vw;
 }
 .explorer-view{
     // right: 0;
@@ -1243,7 +1247,6 @@ font-family: 'Times New Roman', Times, serif;
         display: initial;
         height: 100%;
         overflow: hidden;
-        padding: 0;
     }
     // .ArtworkInfo-toggleTags{
     //     transform: translateY(-60px);
