--- a/src/css/frontEndMain.scss
+++ b/src/css/frontEndMain.scss
@@ -475,7 +475,7 @@ font-family: 'Times New Roman', Times, serif;
     justify-content: flex-end;
 }
 .Tags-item_container{
-    font-family: 'Courier New', Courier, monospace !important;
+    // font-family: 'Courier New', Courier, monospace !important;
     border: 1px solid black;
     padding: 2px 7px 2px 7px !important;
     margin: 2px 0px 2px 8px !important;
@@ -487,8 +487,8 @@ font-family: 'Times New Roman', Times, serif;
     transform: scale(1.1);
 }
 .Tags-item_text{
-    font-size: 12px;
-    font-weight: 600;
+    // font-size: 12px;
+    // font-weight: 600;
     white-space: nowrap;
 }
 .Tags-item_container-closeButton{
@@ -508,7 +508,6 @@ font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     text-transform: uppercase !important;
     border: none;
-    display: initial;
     overflow: visible;
     .Tags-item_text{
         color: white;
@@ -599,7 +598,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 .ArtworkInfo-wrapper{
     width: 100%;
-    // height: 100%;
+    // padding-right: 10px;
     height: 0;
     background-color: white;
 }
@@ -961,7 +960,6 @@ font-family: 'Times New Roman', Times, serif;
     display: initial;
     height: 100%;
     overflow: hidden;
-    padding: 0 3vw 0 3vw;
 }
 .explorer-view{
     // right: 0;
@@ -1240,7 +1238,6 @@ font-family: 'Times New Roman', Times, serif;
         display: initial;
         height: 100%;
         overflow: hidden;
-        padding: 0;
     }
     // .ArtworkInfo-toggleTags{
     //     transform: translateY(-60px);
