--- a/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.scss
+++ b/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.scss
@@ -73,7 +73,7 @@
     display: flex;
     touch-action: pan-y;
     background-color: white;
-    will-change: transform;
+    // will-change: transform;
     overflow: hidden;
     // z-index: 998;
 }
