--- a/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.css
+++ b/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.css
@@ -72,7 +72,7 @@
   left: 0;
   position: absolute;
   z-index: 998;
-  height: calc(100% - 40px);
+  height: calc(100% - 70px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -173,6 +173,7 @@
   position: absolute;
   top: 0;
   scroll-behavior: smooth;
+  height: 51%;
 }
 
 .dotWrapper {
@@ -183,11 +184,11 @@
   -webkit-box-flex: 0;
       -ms-flex: none;
           flex: none;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
+  border: 2px solid black;
   border-radius: 999px;
   background: white;
-  border: 3px solid #5f5f5f;
   margin: 5px;
   cursor: pointer;
 }
