--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -659,15 +659,12 @@ font-family: 'Times New Roman', Times, serif;
     font-size: 14px;
 }
 .ArtworkInfo--descriptions{
-    // margin: 1vw 0;
-    margin: 10px 0;
     font-size: 14px;    
     max-width: 600px;
-    margin-left: 50px;
+    margin: 10px 0 5px 20px;
 }
 .ArtworkInfo--descriptions_instance{
-    // text-indent: 10px;
-    // padding-left: 32px;
+    max-width: 60ch;
     font-size: 12px;
 }
 .ArtworkInfo_artworkFamily{
@@ -676,9 +673,6 @@ font-family: 'Times New Roman', Times, serif;
 }
 .ArtworkInfo_artworkTitle{
     font-size: 14px;
-}
-.ArtworkInfo_artworkTitle_secondary{
-    color: #ababab;
 }
 .ArtworkInfo_locationYear{
     font-size: 12px;
@@ -1396,14 +1390,6 @@ font-family: 'Times New Roman', Times, serif;
       span{
           font-size: 12px;
       }
-  }
-  .ArtworkInfo-Title{
-      position: relative;
-    //   display: flex;
-    //   padding: 8px 3vw 5px 3vw;
-      justify-content: space-between;
-        background-color: white;
-        width: 100%;
   }
 
   @import './components/enlarge';
