--- a/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.scss
+++ b/client/src/components/FrontEnd/components/Enlarge/Carousel/css/index.module.scss
@@ -66,7 +66,7 @@
     z-index: 998;
     box-shadow: -2px 0px 17px 4px rgba(182,182,182,0.28);
     cursor: zoom-in;
-    transition: 0.2s transform;
+    // transition: 0.2s transform;
 }
 .zoomOut{
     cursor: zoom-out;
@@ -126,7 +126,7 @@
     position: absolute;
     top: 0;
     scroll-behavior: smooth;
-    height: 51%;
+    height: 30px;
 }
 .dotWrapper{
     position: relative;
