--- a/client/src/components/FrontEnd/components/ArtworkInfo/css/artworkInfo.css
+++ b/client/src/components/FrontEnd/components/ArtworkInfo/css/artworkInfo.css
@@ -16,12 +16,16 @@
 
 .ArtworkInfo-title_wrapper {
   position: absolute;
-  bottom: 100%;
+  bottom: 99%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-color: white;
   width: 100%;
+}
+
+.ArtworkInfo_padded {
+  padding: 0 20px;
 }
 
 .ArtworkInfo-title_content {
@@ -32,19 +36,5 @@
 
 .ArtworkInfo-title_secondary {
   margin-bottom: 3px;
-}
-
-.ArtworkInfo-title_content, .secondaryInfo {
-  padding-left: 20px;
-}
-
-.ArtworkInfo-wrapper {
-  padding-left: 30px;
-}
-
-.ArtworkInfo--descriptions,
-.ArtworkInfo-container_seealso,
-.Tags-item_wrapper {
-  padding-right: 20px;
 }
 /*# sourceMappingURL=artworkInfo.css.map */
