--- a/client/src/components/FrontEnd/components/ArtworkInfo/css/artworkInfo.scss
+++ b/client/src/components/FrontEnd/components/ArtworkInfo/css/artworkInfo.scss
@@ -14,10 +14,13 @@
 }
 .ArtworkInfo-title_wrapper{
     position: absolute;
-    bottom: 100%;
+    bottom: 99%;
     justify-content: space-between;
     background-color: white;
     width: 100%;
+}
+.ArtworkInfo_padded{
+    padding: 0 20px;
 }
 .ArtworkInfo-title_content{
     line-height: 14px;
@@ -27,15 +30,15 @@
 .ArtworkInfo-title_secondary{
     margin-bottom: 3px;
 }
-.ArtworkInfo-title_content, .secondaryInfo{
-    padding-left: 20px;
-}
-.ArtworkInfo-wrapper{
-    padding-left: 30px;
-}
-.ArtworkInfo--descriptions, 
-.ArtworkInfo-container_seealso, 
-.Tags-item_wrapper{
-    padding-right: 20px;
-}
+// .ArtworkInfo-title_content, .secondaryInfo{
+//     padding-left: 20px;
+// }
+// .ArtworkInfo-wrapper{
+//     padding-left: 30px;
+// }
+// .ArtworkInfo--descriptions, 
+// .ArtworkInfo-container_seealso, 
+// .Tags-item_wrapper{
+//     padding-right: 20px;
+// }
 
