--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1939,11 +1939,12 @@ label {
       -ms-flex-pack: justify;
           justify-content: space-between;
   overflow: hidden;
+  padding: 0 20px 0 15px;
 }
 
 .viewControls-button-info {
   position: relative;
-  padding: 0 10px 0 40px;
+  padding: 0 0 0 40px;
 }
 
 .viewControls-button {
