--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1939,7 +1939,7 @@ label {
       -ms-flex-pack: justify;
           justify-content: space-between;
   overflow: hidden;
-  padding: 0 20px 0 15px;
+  padding-left: 15px;
 }
 
 .viewControls-button-info {
@@ -1948,6 +1948,8 @@ label {
 }
 
 .viewControls-button {
+  padding-right: 20px;
+  border-left: 1px solid black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
